End of June 28th, Still trying to fix all bugs in Authentication
