# models/extra.go
@@ -19,13 +19,12 @@ type Industry struct {
 //ValidateToken validates a token string
 func ValidateToken(tokenString string) {
 	claims := jwt.MapClaims{}
-	token, err := jwt.ParseWithClaims(tokenString, claims, func(token *jwt.Token) (interface{}, error) {
+	_, err := jwt.ParseWithClaims(tokenString, claims, func(token *jwt.Token) (interface{}, error) {
 		return []byte(beego.AppConfig.String("jwtkey")), nil
 	})
 
 	if err != nil {
 		panic(err)
-		log.Println(token)
 	}
 
 	for key, val := range claims {
@@ -49,4 +48,44 @@ func SendRegistrationEmail(u User) {
 	go newRequest.Send(path, data)
 
 	return
+}
+
+//SendInviteMessage sends an invite message to a user to join the system.
+func SendInviteMessage(u User, link string, template string, userType string) {
+	mailSubject := "Invitation to Join SMEHUB"
+	newRequest := mailer.NewRequest(u.Email, mailSubject)
+	data := mailer.Invitation{}
+	data.User = u.FullName
+	data.Type = userType
+	data.Link = link
+
+	go newRequest.Invite(template, data)
+	return
+}
+
+//GetUserType gets type of a user
+func GetUserType(code int) string {
+	if code == 999 {
+		return "Application Owner"
+	}
+	if code == 99 {
+		return "Super Admin"
+	}
+	if code == 88 {
+		return "Subordinate Admin"
+	}
+	if code == 77 {
+		return "Judge"
+	}
+	if code == 66 {
+		return "Mentor"
+	}
+	if code == 55 {
+		return "Investor"
+	}
+	if code == 0 {
+		return "Regular User"
+	}
+
+	return "Invalid User Code"
 }
