# routers/commentsRouter_controllers.go
@@ -36,9 +36,9 @@ func init() {
 
     beego.GlobalControllerRouter["lagosapi/controllers:AdminController"] = append(beego.GlobalControllerRouter["lagosapi/controllers:AdminController"],
         beego.ControllerComments{
-            Method: "GetAllSubAdmins",
-            Router: `/sub/`,
-            AllowHTTPMethods: []string{"get"},
+            Method: "CreateSupAdmin",
+            Router: `/register`,
+            AllowHTTPMethods: []string{"post"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
@@ -54,6 +54,15 @@ func init() {
 
     beego.GlobalControllerRouter["lagosapi/controllers:AdminController"] = append(beego.GlobalControllerRouter["lagosapi/controllers:AdminController"],
         beego.ControllerComments{
+            Method: "GetAllSubAdmins",
+            Router: `/sub/`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["lagosapi/controllers:AdminController"] = append(beego.GlobalControllerRouter["lagosapi/controllers:AdminController"],
+        beego.ControllerComments{
             Method: "GetSupAdmin",
             Router: `/sup/`,
             AllowHTTPMethods: []string{"get"},
@@ -63,17 +72,35 @@ func init() {
 
     beego.GlobalControllerRouter["lagosapi/controllers:AdminController"] = append(beego.GlobalControllerRouter["lagosapi/controllers:AdminController"],
         beego.ControllerComments{
-            Method: "CreateSupAdmin",
-            Router: `/sup/register`,
+            Method: "SuperAdminExist",
+            Router: `/super/exist`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["lagosapi/controllers:OwnerController"] = append(beego.GlobalControllerRouter["lagosapi/controllers:OwnerController"],
+        beego.ControllerComments{
+            Method: "Post",
+            Router: `/exist`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["lagosapi/controllers:OwnerController"] = append(beego.GlobalControllerRouter["lagosapi/controllers:OwnerController"],
+        beego.ControllerComments{
+            Method: "CreateAppOwner",
+            Router: `/register`,
             AllowHTTPMethods: []string{"post"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
 
-    beego.GlobalControllerRouter["lagosapi/controllers:ExtraController"] = append(beego.GlobalControllerRouter["lagosapi/controllers:ExtraController"],
+    beego.GlobalControllerRouter["lagosapi/controllers:TokenController"] = append(beego.GlobalControllerRouter["lagosapi/controllers:TokenController"],
         beego.ControllerComments{
             Method: "ValidateToken",
-            Router: `/token/validate`,
+            Router: `/validate`,
             AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
@@ -111,15 +138,6 @@ func init() {
             Method: "Post",
             Router: `/register`,
             AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["lagosapi/controllers:UserController"] = append(beego.GlobalControllerRouter["lagosapi/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "ValidateToken",
-            Router: `/validate`,
-            AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
