# swagger/swagger.json
@@ -99,6 +99,37 @@
                 }
             }
         },
+        "/admin/register": {
+            "post": {
+                "tags": [
+                    "admin"
+                ],
+                "description": "Create more super administrative users.",
+                "operationId": "AdminController.CreateAdmin",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for admin content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIResponseData"
+                        }
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
         "/admin/sub/": {
             "get": {
                 "tags": [
@@ -165,13 +196,74 @@
                 }
             }
         },
-        "/admin/sup/register": {
-            "post": {
+        "/admin/super/exist": {
+            "get": {
                 "tags": [
                     "admin"
                 ],
-                "description": "Create more super administrative users.",
-                "operationId": "AdminController.CreateAdmin",
+                "description": "checks if super admin exists on the system",
+                "operationId": "AdminController.SuperAdmin",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for user content",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIResponseData"
+                        }
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/owner/exist": {
+            "get": {
+                "tags": [
+                    "owner"
+                ],
+                "description": "checks if app owner exists on the system",
+                "operationId": "OwnerController.AppOwner",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for user content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/owner/register": {
+            "post": {
+                "tags": [
+                    "owner"
+                ],
+                "description": "Create single app owner account.",
+                "operationId": "OwnerController.Create App Owner",
                 "parameters": [
                     {
                         "in": "body",
@@ -196,13 +288,13 @@
                 }
             }
         },
-        "/extras/token/validate": {
+        "/token/validate": {
             "get": {
                 "tags": [
-                    "extras"
+                    "token"
                 ],
                 "description": "validates token string in a request and returns the user information.",
-                "operationId": "ExtraController.Validate Token",
+                "operationId": "TokenController.Validate Token",
                 "responses": {
                     "200": {
                         "description": "{string} TokenString"
@@ -292,20 +384,6 @@
                 }
             }
         },
-        "/user/validate": {
-            "get": {
-                "tags": [
-                    "user"
-                ],
-                "description": "decrypts token string to get user data",
-                "operationId": "UserController.logout",
-                "responses": {
-                    "200": {
-                        "description": "{string} logout success"
-                    }
-                }
-            }
-        },
         "/user/{uid}": {
             "get": {
                 "tags": [
@@ -373,17 +451,22 @@
             "title": "Invite",
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "integer",
+                    "format": "int64"
+                },
                 "email": {
                     "type": "string"
                 },
                 "role": {
                     "type": "integer",
                     "format": "int64"
-                },
-                "token": {
-                    "type": "string"
                 }
             }
+        },
+        "models.Response": {
+            "title": "Response",
+            "type": "object"
         },
         "models.ResponseBody": {
             "title": "ResponseBody",
@@ -496,8 +579,12 @@
             "description": "AdminController handles admin controller\n"
         },
         {
-            "name": "extras",
-            "description": "ExtraController handles every other system related sub-service\n"
+            "name": "token",
+            "description": "TokenController handles every other system related sub-service\n"
+        },
+        {
+            "name": "owner",
+            "description": "OwnerController handles all operations about App Owner\n"
         }
     ]
 }
